--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ main{
     background-image: url(../img/displaybg.jpg);
     background-size: cover;
     background-position: center;
-    border: 2px solid black;
+    border: 2px solid greenyellow;
 
     font-size: 30px;
     font-weight: bold;
